--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -9,3 +9,6 @@ path="../"
 
 [dependencies.nalgebra]
 git = "https://github.com/sebcrozet/nalgebra.git"
+
+[dependencies.image]
+git = "https://github.com/PistonDevelopers/image.git"
